Changes from moment to humanReadableDate to be more consistent, and fixes some styling

--- a/cdap-ui/app/cdap/components/PipelineDetails/PipelineDetailsTopPanel/PipelineDetailsTopPanel.scss
+++ b/cdap-ui/app/cdap/components/PipelineDetails/PipelineDetailsTopPanel/PipelineDetailsTopPanel.scss
@@ -15,20 +15,10 @@
 */
 
 @import '../../../styles/variables.scss';
+@import '../../../styles/mixins.scss';
 $pipeline-type-icon-size: 20px;
 $top-panel-height: 55px;
 $btn-border-color: $grey-03;
-
-@mixin border-element($right: -16px, $top: 28px) {
-  content: "";
-  position: absolute;
-  height: 1px;
-  border-bottom: 1px solid $grey-05;
-  width: 33px;
-  right: $right;
-  top: $top;
-  transform: rotate(90deg);
-}
 
 .pipeline-details-top-panel {
   height: $top-panel-height;
@@ -68,6 +58,7 @@ $btn-border-color: $grey-03;
         color: $grey-01;
         overflow: hidden;
         text-overflow: ellipsis;
+
         /* to leave some space for the pipeline type icon and pipeline version */
         max-width: calc(100% - 180px);
       }
@@ -193,7 +184,7 @@ $btn-border-color: $grey-03;
       }
 
       &:after {
-        @include border-element();
+        @include border-element(-17px);
       }
     }
 
@@ -245,7 +236,7 @@ $btn-border-color: $grey-03;
 
     .pipeline-actions-container {
       margin-left: 3px;
-      border-bottom: 1px solid $btn-border-color;
+      border-bottom: 1px solid $grey-08;
 
       .pipeline-actions-popper {
         height: 100%;
