--- a/cdap-ui/app/hydrator/adapters.less
+++ b/cdap-ui/app/hydrator/adapters.less
@@ -42,9 +42,9 @@ body.theme-cdap {
 
     my-dag-plus {
       width: 100%;
-      height: ~"-moz-calc(100vh - 213px)"; // Header (50) + toppanel in detailed view (55) + run level info (55) + footer (53)
-      height: ~"-webkit-calc(100vh - 213px)";
-      height: ~"calc(100vh - 213px)";
+      height: ~"-moz-calc(100vh - 158px)"; // Header (50) + toppanel in detailed view (55) + footer (53)
+      height: ~"-webkit-calc(100vh - 158px)";
+      height: ~"calc(100vh - 158px)";
       display: block;
     }
 
